# PLIN-Cloud-Edge-Device-Learned-Index

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  client.cpp  device_generator.cpp  hot_key.cpp  hot_key.h  new_train.py  plin_index.h  readme-en.md  server.cpp  split_info.txt  ycsb_generator.cpp
YCSB/workloads/: ts_lstm_workload
data/: new.ipynb
doc/: ARCHITECTURE.md  HANDOFF_TO_CODEX.md  overview.md  云边端自适应学习索引.docx  实验汇报.wps  实验汇报答复版本.doc  实验问题.wps  架构理解问题.wps
hot_lstm/: export.py  model.py  train.py
hot_lstm/models/: cloud_lstm.ckpt  cloud_lstm.pt  end_lstm_1.ckpt  end_lstm_1.pt  end_lstm_10.ckpt  end_lstm_10.pt  end_lstm_2.ckpt  end_lstm_2.pt  end_lstm_3.ckpt  end_lstm_3.pt  end_lstm_4.ckpt  end_lstm_4.pt  end_lstm_5.ckpt  end_lstm_5.pt  end_lstm_6.ckpt  end_lstm_6.pt  end_lstm_7.ckpt  end_lstm_7.pt  end_lstm_8.ckpt  end_lstm_8.pt  end_lstm_9.ckpt  end_lstm_9.pt
legacy/: README.md  client.cpp  hot_key.cpp  hot_key.h  lstm_predictor.pth  net_parameter.h  new_train.py  server.cpp  test_demo.cpp
output/: benchmark_3layer.csv  benchmark_3layer.md
scripts/: bench.sh  fetch_libtorch.sh  run_all.sh  status_all.sh  stop_all.sh
src/: README.md
src/cloud/: CMakeLists.txt  cloud_lstm_runner.cpp  cloud_lstm_runner.h  cloud_lstm_runner_stub.cpp  cloud_server.cpp
src/common/: CMakeLists.txt  loopback_test.cpp  proto.h  range_map.cpp  range_map.h  rdma_snapshot.h  rdma_transport.cpp  rdma_transport.h  rpc.cpp  rpc.h  topology.yaml  transport.cpp  transport.h
src/core/index/: hot_key.h  plin_index.h  serialize.h  utils.h
src/edge/: CMakeLists.txt  edge_server.cpp
src/end/: CMakeLists.txt  end_lstm_runner.cpp  end_lstm_runner_stub.cpp  end_node.cpp  hot_cache.cpp  hot_cache.h  parent_plin_cache.cpp  parent_plin_cache.h
src/tools/workload/: device_generator.cpp
